--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 2,
   "printWidth": 200,
-  "parser": "flow"
+  "trailingComma": "es5",
+  "useTabs": false
 }
