--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/moredash",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "1.8.4",
+  "version": "1.8.5",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
@@ -31,12 +31,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "babel-jest": "^27.0.6",
     "jest": "^25.5.4",
     "nodemon": "^2.0.6",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2"
+    "prettier": "^1.19.1"
   },
   "jest": {
     "verbose": true,
