--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@lockevn/gachchan",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "1.8.7",
+  "version": "1.9.0",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
+    "CommonHelper from xc-api",
     "node",
     "browser",
     "lib",
@@ -15,7 +16,7 @@
     "src/",
     "index.js"
   ],
-  "main": "dist/index_bundle.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "webpack",
     "test": "jest",
@@ -25,7 +26,6 @@
   "dependencies": {
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
-    "axios": "^0.18.0",
     "decimal.js": "^10.2.1",
     "deepmerge": "^4.2.2",
     "lodash": "^4.17.21"
