--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "1.9.3",
+  "version": "1.9.4",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "test": "npm run build & jest",
+    "test": "jest",
+    "testbundle": "npm run build & jest",
     "lint": "npx     eslint --fix ./src",
     "format": "prettier --write \"**/*.js\"",
     "push": "npm run build & git push origin master --force"
