--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@lockevn/gachchan",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
+    "StockHelper from xc-api",
     "CommonHelper from xc-api",
     "CommonHelper from xcap-portal",
     "node",
@@ -38,20 +39,20 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "jest": "^27.0.6",
     "@babel/core": "^7.14.8",
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
-    "babel-jest": "^27.0.6",
-    "jest": "^25.5.4",
-    "nodemon": "^2.0.6",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.1.0",
     "eslint": "^7.31.0",
     "eslint-webpack-plugin": "^3.0.1",
+    "nodemon": "^2.0.6",
+    "prettier": "^1.19.1",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "prettier": "^1.19.1"
+    "webpack-cli": "^3.3.12"
   },
   "jest": {
     "verbose": true,
