--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "files": [
     "src/",
+    "services/",
     "index.js"
   ],
   "main": "dist/index.js",
@@ -35,6 +36,7 @@
     "date-fns-tz": "^1.1.4",
     "decimal.js": "^10.2.1",
     "deepmerge": "^4.2.2",
+    "axios": "^0.18.0",
     "lodash": "^4.17.21"
   },
   "peerDependencies": {},
