--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
@@ -26,6 +26,7 @@
   "scripts": {
     "build": "webpack",
     "test": "npm run build & jest",
+    "testinnode": "babel-node ./src/helper/CommonHelper.test.console.js",
     "test:cov": "npm run build & jest --coverage",
     "lint": "npx     eslint --fix ./src",
     "format": "prettier --write \"**/*.js\"",
@@ -41,8 +42,8 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "jest": "^27.0.6",
     "@babel/core": "^7.14.8",
+    "@babel/node": "^7.14.9",
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
@@ -51,6 +52,7 @@
     "babel-loader": "^8.1.0",
     "eslint": "^7.31.0",
     "eslint-webpack-plugin": "^3.0.1",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
     "webpack": "^4.44.1",
