--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
@@ -32,7 +32,8 @@
     "format": "prettier --write \"**/*.js\"",
     "push": "git push origin master --force"
   },
-  "dependencies": {
+  "dependencies": {},
+  "peerDependencies": {
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
     "decimal.js": "^10.2.1",
@@ -40,7 +41,6 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.21"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.9",
