--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@lockevn/gachchan",
+  "version": "5.2.2",
+  "note": "ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "share lib for common helper functions, work in node and browser",
-  "version": "5.1.0",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
