--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "5.2.4",
-  "note": "RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
+  "version": "5.2.5",
+  "note": "Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "share lib for common helper functions, work in node and browser",
   "author": "lockevn",
   "license": "See LICENSE",
@@ -25,7 +25,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack & npx tsc -p ./tsconfig.jsonc",
     "test": "npm run build & jest",
     "testinnode": "babel-node ./src/helper/CommonHelper.test.console.js",
     "test:cov": "npm run build & jest --coverage",
@@ -35,10 +35,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "date-fns": "^2.22.1",
-    "date-fns-tz": "^1.1.4",
     "decimal.js": "^10.2.1",
-    "deepmerge": "^4.2.2",
     "axios": "^0.18.0",
     "lodash": "^4.17.21"
   },
@@ -56,6 +53,7 @@
     "jest": "^27.0.6",
     "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
+    "typescript": "^4.5.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
