--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "5.2.6",
+  "version": "5.3.0",
   "note": "Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "share lib for common helper functions, work in node and browser",
   "author": "lockevn",
@@ -37,10 +37,9 @@
     "format": "prettier --write \"**/*.js\"",
     "push": "git push origin master --force"
   },
-  "dependencies": {},
   "peerDependencies": {
+    "axios": ">0.18.0",
     "decimal.js": "^10.2.1",
-    "axios": "^0.18.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -48,18 +47,16 @@
     "@babel/node": "^7.14.9",
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.8",
-    "babel-eslint": "^10.1.0",
+    "@babel/preset-env": "^7.14.8",    
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.1.0",
     "eslint": "^7.31.0",
-    "eslint-webpack-plugin": "^3.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
     "typescript": "^4.5.4",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.9.2"
   },
   "jest": {
     "verbose": true,
@@ -70,5 +67,8 @@
     "rootDir": "src",
     "testRegex": ".spec.js$",
     "coverageDirectory": "../coverage"
+  },
+  "dependencies": {
+    "@babel/eslint-parser": "^7.18.2"
   }
 }
