--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
+  "editor.formatOnSave": true,
   "files.exclude": {
-    // "**/package-lock.json": true
-    "dist/**": true
+    // "**/package-lock.json": true,
+    // "**/pnpm-lock.yaml": true,
+    // "dist/**": true
   },
   "search.exclude": {
     "**/package-lock.json": true,
+    "**/pnpm-lock.yaml": true,
     "dist/**": true
   }
 }
