--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "5.6.3",
-  "note": "HtmlHelper. Shuffle. UTC Util. Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
-  "description": "share lib for common helper functions, work in node and browser",
+  "version": "6.0.0",
+  "releasenote": "HtmlHelper. Shuffle. UTC Util. Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
+  "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
   "author": "lockevn",
   "license": "See LICENSE",
   "keywords": [
-    "StockHelper from xc-api",
+    "StockvnHelper from xc-api",
     "CommonHelper from xc-api",
     "CommonHelper from xcap-portal",
     "node",
@@ -15,6 +15,9 @@
     "util",
     "lockevn"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/",
     "src/",
@@ -24,52 +27,34 @@
     "CHANGELOG.md",
     "README.md"
   ],
-  "main": "dist/index.js",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    "require": "./dist/index.js",
+    "import": "./dist/index.mjs"
   },
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "webpack & npx tsc -p ./tsconfig.jsonc",
-    "test": "npm run build & jest",
-    "testinnode": "babel-node ./src/helper/CommonHelper.test.console.js",
-    "test:cov": "npm run build & jest --coverage",
-    "lint": "npx     eslint --fix ./src",
-    "format": "prettier --write \"**/*.js\"",
-    "push": "git push origin master --force"
+    "build-fast": "tsup src/index.ts --format cjs,esm",
+    "build": "pnpm run build-fast -- --dts-resolve",
+    "test": "vitest run",
+    "prepublishOnly": "pnpm run build"
+  },
+  "devDependencies": {
+    "@egoist/prettier-config": "1.0.0",
+    "prettier": "2.8.4",
+    "tsup": "6.6.3",
+    "typescript": "4.9.5",
+    "vitest": "0.28.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "decimal.js": "^10.2.1",
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "axios": ">0.21.0",
     "decimal.js": "^10.2.1",
     "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/node": "^7.14.9",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/eslint-parser": "^7.18.2",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.1.0",
-    "eslint": "^7.31.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.6",
-    "prettier": "^1.19.1",
-    "typescript": "^4.5.4",
-    "webpack-cli": "^4.9.2"
-  },
-  "jest": {
-    "verbose": true,
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.js$",
-    "coverageDirectory": "../coverage"
-  },
-  "dependencies": {
-    
   }
 }
