--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
+    "@types/lodash": "^4.17.4",
     "prettier": "2.8.4",
     "tsup": "6.6.3",
     "typescript": "4.9.5",
