--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "6.0.0",
+  "version": "6.0.2",
   "releasenote": "HtmlHelper. Shuffle. UTC Util. Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
   "author": "lockevn",
@@ -36,7 +36,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build-fast": "tsup src/index.ts --format cjs,esm",
-    "build": "pnpm run build-fast -- --dts-resolve",
+    "build": "pnpm run build-fast --minify --dts",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build"
   },
