--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
     "noImplicitAny": true,
 
     // Tells TypeScript to read JS files, as normally they are ignored as source files
-    "allowJs": true,
-    "resolveJsonModule": true,
+    // "allowJs": true,
+    // "resolveJsonModule": true,
 
     // Generate d.ts files
     "declaration": true,
     // This compiler run should only output d.ts files
-    "emitDeclarationOnly": true,
+    // "emitDeclarationOnly": true,
     // go to js file when using IDE functions like "Go to Definition" in VSCode
     "declarationMap": true,
 
