--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
-    "semi": false,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "printWidth": 200,
-    "trailingComma": "es5",
-    "useTabs": false
-  }
-  
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "printWidth": 200,
+  "trailingComma": "es5",
+  "useTabs": false
+}
