--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "6.7.2",
-  "releasenote": "Remove deprecated getCurrentGMT7TimeString(). Better Comment. Expose DateTimeHelper. HtmlHelper. Shuffle. UTC Util. Remove lodash from bundle. RoundNumber(). ContinuousExecuteBySetTimeout() with new argument executeImmediately",
+  "version": "7.0.0",
+  "releasenote": "Fix the way we import lodash. Remove deprecated getCurrentGMT7TimeString(). Better Comment. UTC Util. ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
   "author": "lockevn",
   "license": "See LICENSE",
@@ -49,11 +49,7 @@
     "typescript": "4.9.5",
     "vitest": "0.28.5"
   },
-  "dependencies": {
-    "axios": "^0.21.0",
-    "decimal.js": "^10.2.1",
-    "lodash": "^4.17.21"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "axios": ">0.21.0",
     "decimal.js": "^10.2.1",
