--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockevn/gachchan",
-  "version": "7.0.1",
-  "releasenote": "Fix the way we import lodash. Remove deprecated getCurrentGMT7TimeString(). Better Comment. UTC Util. ContinuousExecuteBySetTimeout() with new argument executeImmediately",
+  "version": "7.0.2",
+  "releasenote": "Add utils to Util. Fix the way we import lodash. Remove deprecated getCurrentGMT7TimeString(). Better Comment. UTC Util. ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
   "author": "lockevn",
   "license": "See LICENSE",
