--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "prettier": "2.8.4",
     "tsup": "6.6.3",
     "typescript": "4.9.5",
-    "vitest": "^3.0.5"
+    "vitest": "latest"
   },
   "peerDependencies": {
     "axios": ">0.21.0",
