--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,38 @@
+_secret
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
+lerna-debug.log*
+
 node_modules
 .DS_Store
-*.log
+dist-ssr
+*.local
 
-coverage
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode
+!.vscode/extensions.json
+!.vscode/settings.json
+
 .idea
-npm-debug.log
-package-lock.json
-pnpm-lock.yaml
-_secret
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
+.parcel-cache
+.cache
+coverage
+
+dist/tsconfig.tsbuildinfo
