--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,9 @@
 
   "files.exclude": {
     "**/package-lock.json": true,
-    "**/pnpm-lock.yaml": true
-    // "**/dist/": true
+    "**/pnpm-lock.yaml": true,
+    "**/.parcel-cache": true,
+    "**/dist/": true
   },
   "search.exclude": {
     "**/node_modules": true,
@@ -23,6 +24,8 @@
     "**/yarn.lock": true,
     "**/package-lock.json": true,
     "**/pnpm-lock.yaml": true,
+
+    "**/.parcel-cache": true,
     "dist/**": true
   },
 
