--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@lockevn/gachchan",
+  "name": "gachchan",
   "version": "7.1.1",
   "releasenote": "Use Parcel to build. Add utils to Util. Fix the way we import lodash. Remove deprecated getCurrentGMT7TimeString(). Better Comment. UTC Util. ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
   "author": "lockevn",
-  "license": "See LICENSE",
+  "license": "LICENSE",
   "keywords": [
     "StockvnHelper from xc-api",
     "CommonHelper from xc-api",
@@ -59,7 +59,6 @@
     "@parcel/transformer-typescript-types": "latest",
     "@types/node": "latest",
     "eslint": "latest",
-    "husky": "latest",
     "parcel": "latest",
     "rimraf": "latest",
     "typescript": "latest",
