--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "gachchan",
   "version": "7.1.1",
-  "releasenote": "Use Parcel to build. Add utils to Util. Fix the way we import lodash. Remove deprecated getCurrentGMT7TimeString(). Better Comment. UTC Util. ContinuousExecuteBySetTimeout() with new argument executeImmediately",
   "description": "Change to TypeScript from v6. Share lib for common helper functions, work in node and browser",
+  "releasenote": "Use Parcel to build.",
   "author": "lockevn",
   "license": "LICENSE",
   "keywords": [
-    "StockvnHelper from xc-api",
-    "CommonHelper from xc-api",
-    "CommonHelper from xcap-portal",
     "node",
     "browser",
     "lib",
-    "util",
-    "lockevn"
+    "utils",
+    "common"
   ],
   "publishConfig": {
     "access": "public"
